[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/MainMenu/buttons/OptionsButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/enceladus.png" type="Texture" id=2]
[ext_resource path="res://assets/main_menu/title.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/EmotionEngine_24.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/MainMenu/buttons/ContinueButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/MainMenu/buttons/NewGameButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/MainMenu/fade_in/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/MainMenu/main_menu.gd" type="Script" id=8]
[ext_resource path="res://scenes/MainMenu/buttons/QuitGame.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/audio/menu_click.wav" type="AudioStream" id=10]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1246.0
margin_bottom = 688.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="VBoxContainer" parent="Menu"]
margin_right = 537.0
margin_bottom = 608.0
__meta__ = {
"_edit_group_": true
}

[node name="Logo" type="TextureRect" parent="Menu/CenterRow"]
margin_right = 537.0
margin_bottom = 129.0
texture = ExtResource( 3 )

[node name="MenuOptions" type="VBoxContainer" parent="Menu/CenterRow"]
margin_top = 133.0
margin_right = 537.0
margin_bottom = 547.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="ContinueButton" parent="Menu/CenterRow/MenuOptions" instance=ExtResource( 5 )]
margin_top = 66.0
margin_bottom = 120.0

[node name="NewGameButton" parent="Menu/CenterRow/MenuOptions" instance=ExtResource( 6 )]
margin_top = 140.0
margin_bottom = 194.0

[node name="OptionsButton" parent="Menu/CenterRow/MenuOptions" instance=ExtResource( 1 )]
margin_top = 214.0
margin_bottom = 268.0

[node name="QuitGame" parent="Menu/CenterRow/MenuOptions" instance=ExtResource( 9 )]
margin_top = 288.0
margin_bottom = 348.0

[node name="VersionLabel" type="Label" parent="Menu/CenterRow"]
margin_top = 551.0
margin_right = 537.0
margin_bottom = 608.0
size_flags_vertical = 9
custom_fonts/font = ExtResource( 4 )
text = "Version 0.1.0
CAU Game Dev Groupe 4"

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
margin_left = 541.0
margin_right = 1126.0
margin_bottom = 608.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="Menu/CenterContainer"]
margin_left = 117.0
margin_top = 129.0
margin_right = 467.0
margin_bottom = 479.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 4

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
